JSMovieView - very close!